# Processing/app.py
@@ -1,16 +1,16 @@
 import connexion
 from connexion import NoContent
-from sqlalchemy import create_engine
-from sqlalchemy.orm import sessionmaker
-from base import Base
-from parking_status import ParkingStatus
-from payment import PaymentEvent
+import json
+import requests
 import datetime
-import pymysql
 import yaml
 import logging
 import logging.config
+from apscheduler.schedulers.background import BackgroundScheduler
+import os.path
+from collections import Counter
 
+# Load config files
 with open('app_conf.yml', 'r') as f:
     app_config = yaml.safe_load(f.read())
 
@@ -19,82 +19,104 @@ with open('log_conf.yml', 'r') as f2:
     logging.config.dictConfig(log_config)
 logger = logging.getLogger('basicLogger')
 
-print('here')
+EVENT_FILE = app_config["datastore"]["filename"]
 
-user = app_config['datastore']['user']
-password = app_config['datastore']['password']
-hostname = app_config['datastore']['hostname']
-port = app_config['datastore']['port']
-db = app_config['datastore']['db']
+def populate_stats():
+    """ Periodically update stats """
+    logger.info("Periodic processing started...")
 
-print(f'mysql+pymysql://{user}:{password}@{hostname}:{port}/{db}')
+    # Read current JSON
+    if os.path.isfile(EVENT_FILE):
+        with open(EVENT_FILE, 'r') as f3:
+            stats = json.load(f3)
+    else:
+        # Default values if the file doesn't exist
+        stats = {
+            'total_status_events': 0,
+            'total_payment_events': 0,
+            'most_frequent_meter': None,
+            'highest_payment': 0,
+            'last_updated': '2024-01-01T23:59:59Z'
+        }
 
-DB_ENGINE = create_engine(f'mysql+pymysql://{user}:{password}@{hostname}:{port}/{db}')
-Base.metadata.bind = DB_ENGINE
-DB_SESSION = sessionmaker(bind=DB_ENGINE)
+    # Get current datetime
+    received_timestamp = stats["last_updated"]
+    current_timestamp = datetime.datetime.now().strftime("%Y-%m-%dT%H:%M:%SZ")
+    headers = {'accept': 'application/json'}
+    parameters = {
+        'start_timestamp': received_timestamp,
+        'end_timestamp': current_timestamp
+        }
 
-def parking_status(body):
-    session = DB_SESSION()
-    ps = ParkingStatus(
-        meter_id=body['meter_id'],
-        device_id=body['device_id'],
-        status=body['status'],
-        spot_number=body['spot_number'],
-        timestamp=body['timestamp'],
-        trace_id=body['trace_id']
-    )
-    session.add(ps)
-    session.commit()
-    session.close()
-    logger.debug(f'Stored parking status event for meter_id {body["meter_id"]}')
-    return NoContent, 201
+    # Query parking status events
+    URL_PARKING = app_config["eventstore"]["parking"]
+    response_parking = requests.get(URL_PARKING, headers=headers, params=parameters)
 
-def payment(body):
-    session = DB_SESSION()
-    pe = PaymentEvent(
-        meter_id=body['meter_id'],
-        device_id=body['device_id'],
-        amount=body['amount'],
-        duration=body['duration'],
-        timestamp=body['timestamp'],
-        trace_id=body['trace_id']
-    )
-    session.add(pe)
-    session.commit()
-    session.close()
-    logger.debug(f'Stored payment event for trace_id {body["trace_id"]}')
-    return NoContent, 201
+    if response_parking.status_code != 200:
+        logger.error(f"Failed to fetch parking status events: {response_parking.status_code}")
+    else:
+        parking_data = response_parking.json()
+        num_parking_events = len(parking_data)
+        logger.info(f"Fetched parking status events: {response_parking.json()}")
+        logger.info(f"Fetched {num_parking_events} parking status events.")
 
-# GET functions
-def get_parking_status(start_timestamp, end_timestamp):
-    """ Gets parking status events between the specified timestamps """
-    session = DB_SESSION()
-    start_datetime = datetime.datetime.strptime(start_timestamp, "%Y-%m-%dT%H:%M:%SZ")
-    end_datetime = datetime.datetime.strptime(end_timestamp, "%Y-%m-%dT%H:%M:%SZ")
-    readings = session.query(ParkingStatus).filter(ParkingStatus.timestamp.between(start_datetime, end_datetime))
+        # Update stats based on parking events
+        stats['total_status_events'] += num_parking_events
+        if parking_data:
+            meters = [entry['meter_id'] for entry in parking_data]
+            stats['most_frequent_meter'] = Counter(meters).most_common(1)[0][0]
 
-    results_list = [reading.to_dict() for reading in readings]
-    session.close()
+    # Query payment events
+    URL_PAYMENT = app_config["eventstore"]["payment"]
+    response_payment = requests.get(URL_PAYMENT, headers=headers, params=parameters)
 
-    logger.info(f"Query for parking status events between {start_timestamp} and {end_timestamp} returns {len(results_list)} results")
-    return results_list, 200
+    if response_payment.status_code != 200:
+        logger.error(f"Failed to fetch payment events: {response_payment.status_code}")
+    else:
+        payment_data = response_payment.json()
+        num_payment_events = len(payment_data)
+        # logger.info(f"Fetched payment status events: {response_payment.json()}")
+        # logger.info(f"Fetched {num_payment_events} payment events.")
 
-def get_payment_events(start_timestamp, end_timestamp):
-    """ Gets payment events between the specified timestamps """
-    session = DB_SESSION()
-    start_datetime = datetime.datetime.strptime(start_timestamp, "%Y-%m-%dT%H:%M:%SZ")
-    end_datetime = datetime.datetime.strptime(end_timestamp, "%Y-%m-%dT%H:%M:%SZ")
-    readings = session.query(PaymentEvent).filter(PaymentEvent.timestamp.between(start_datetime, end_datetime))
+        # Update stats based on payment events
+        stats['total_payment_events'] += num_payment_events
+        if payment_data:
+            highest_payment = max(entry['amount'] for entry in payment_data)
+            stats['highest_payment'] = max(stats['highest_payment'], highest_payment)
 
-    results_list = [reading.to_dict() for reading in readings]
-    session.close()
+    # Update last_updated timestamp
+    stats['last_updated'] = current_timestamp
 
-    logger.info(f"Query for payment events between {start_timestamp} and {end_timestamp} returns {len(results_list)} results")
-    return results_list, 200
+    # Write updated stats back to the JSON file
+    with open(EVENT_FILE, 'w') as file:
+        json.dump(stats, file, indent=2)
 
+    logger.debug(stats)
+    logger.info("Periodic processing complete...")
+
+def init_scheduler():
+    sched = BackgroundScheduler(daemon=True)
+    sched.add_job(populate_stats, 'interval', seconds=app_config['scheduler']['period_sec'])
+    sched.start()
+
+# Your functions here
+def get_stats():  # /parking/stats
+    logger.info("===> Request for stats started...")
+    if os.path.isfile(EVENT_FILE):
+        with open(EVENT_FILE, 'r') as f4:
+            statsread = json.load(f4)
+    else:
+        logger.error(f"Stats file {EVENT_FILE} cannot be found")
+        return {"message": "Statistics do not exist"}, 404
+
+    logger.debug(statsread)
+    logger.info("===> Request for stats complete...")
+    
+    return statsread, 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yml", strict_validation=True, validate_responses=True)
 
 if __name__ == "__main__":
-    app.run(port=8090)
+    init_scheduler()
+    app.run(port=8100) #, use_reloader=False)
